python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 70
    targetPort: 5007
  selector:
    app: python-app
